<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.anthonsteiness.handyjuralayout.LoginActivity">

    <include layout="@layout/app_bar"
    android:id="@+id/action_bar"/>

<LinearLayout
    android:id="@+id/layout_mail_pass"
    android:layout_below="@id/action_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editEmail1"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColorHint="@color/colorDarkGrey"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorDarkGrey"
        android:backgroundTint="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/colorDarkGrey"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorPrimary"
        android:backgroundTint="@color/colorDarkGrey"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forgotPassText"
        android:text="Forgotten your password?\nClick here"
        android:textSize="15dip"
        android:textAlignment="center"
        android:textColor="@color/colorDarkGrey"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:clickable="true"/>


    <Button
        android:id="@+id/loginBtn2"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorDarkGrey"
        android:textStyle="bold"
        android:text="Login"
        android:textSize="40dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>


</LinearLayout>

</RelativeLayout>
